@@ -108,6 +108,11 @@ namespace
 			}
 		}
 
+		if (!sett_dict.has_key("outgoing_port"))
+			sett.outgoing_ports.first = extract<int>(sett_dict["outgoing_port"]);
+		if (!sett_dict.has_key("num_outgoing_ports"))
+			sett.outgoing_ports.second = sett.outgoing_ports.first + extract<int>(sett_dict["num_outgoing_ports"]);
+
 		ses.set_settings(sett);
 	}
 
@@ -145,6 +150,8 @@ namespace
 					break;
 			}
 		}
+		sett_dict["outgoing_port"] = sett.outgoing_ports.first;
+		sett_dict["num_outgoing_ports"] = sett.outgoing_ports.second - sett.outgoing_ports.first + 1;
 		return sett_dict;
 	}
 
